fix: center story container on wide viewports in peanut-city

--- a/src/peanut-city.html
+++ b/src/peanut-city.html
@@ -6,11 +6,14 @@
     <title>Peanut City - Bot Sportello Noir</title>
     <link rel="stylesheet" href="../page-theme.css">
     <style>
-        /* Uses body.story-page from page-theme.css for centering */
         body {
             padding: 50px 20px 20px 20px;
             background: #0a0a0a;
             line-height: 1.7;
+        }
+
+        .story-container {
+            margin: 0 auto;
         }
 
         .chapter {
