--- a/src/peanut-city.html
+++ b/src/peanut-city.html
@@ -5,289 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Peanut City - Bot Sportello Noir</title>
     <link rel="stylesheet" href="../page-theme.css">
-    <style>
-        body {
-            padding: 50px 20px 20px 20px;
-            background: #0a0a0a;
-            line-height: 1.7;
-        }
-
-        .story-container {
-            margin: 0 auto;
-        }
-
-        .chapter {
-            margin-bottom: 60px;
-            opacity: 0;
-            transform: translateY(30px);
-            transition: opacity 0.6s ease, transform 0.6s ease;
-        }
-
-        .chapter.revealed {
-            opacity: 1;
-            transform: translateY(0);
-        }
-
-        .chapter-number {
-            color: #00ffff;
-            font-size: 0.8em;
-            letter-spacing: 2px;
-            margin-bottom: 6px;
-            text-transform: uppercase;
-        }
-
-        .chapter-title {
-            color: #00ffff;
-            font-size: 1.6em;
-            margin-bottom: 20px;
-            text-shadow: 0 0 8px rgba(0, 255, 255, 0.3);
-        }
-
-        .paragraph {
-            margin-bottom: 18px;
-            font-size: 1.05em;
-        }
-
-        .emphasis {
-            color: #ff0000;
-            font-weight: bold;
-        }
-
-        .whisper {
-            font-style: italic;
-            color: #5a9fb0;
-            font-size: 0.95em;
-        }
-
-        .divider {
-            text-align: center;
-            margin: 35px 0;
-            color: #00ffff;
-            font-size: 1.3em;
-            letter-spacing: 8px;
-        }
-
-        .twist-reveal {
-            background: linear-gradient(180deg, #0a0a0a 0%, #1a0a0a 50%, #0a0a0a 100%);
-            padding: 40px 25px;
-            margin: 50px -20px 30px -20px;
-            border-top: 2px solid #ff0000;
-            border-bottom: 2px solid #ff0000;
-            text-align: center;
-        }
-
-        .twist-reveal .reveal-text {
-            font-size: 1.15em;
-            color: #ff0000;
-            text-shadow: 0 0 15px rgba(255, 0, 0, 0.5);
-            animation: pulse 2s infinite;
-            line-height: 1.8;
-        }
-
-        @keyframes pulse {
-            0%, 100% { opacity: 1; }
-            50% { opacity: 0.7; }
-        }
-
-        .epilogue {
-            margin-top: 50px;
-            padding: 25px;
-            border: 1px solid #00ffff;
-            background: rgba(0, 255, 255, 0.05);
-        }
-
-        .signature {
-            text-align: right;
-            margin-top: 25px;
-            color: #00ffff;
-            font-style: italic;
-        }
-
-        .progress-indicator {
-            position: fixed;
-            top: 50px;
-            right: 15px;
-            width: 3px;
-            height: 150px;
-            background: rgba(126, 200, 227, 0.2);
-            border-radius: 2px;
-            z-index: 100;
-        }
-
-        .progress-bar {
-            width: 100%;
-            height: 0%;
-            background: #00ffff;
-            border-radius: 2px;
-            transition: height 0.3s ease;
-            box-shadow: 0 0 8px rgba(0, 255, 255, 0.5);
-        }
-
-        /* Audio Controls - Noir Style */
-        .audio-controls {
-            position: fixed;
-            bottom: 15px;
-            right: 15px;
-            background: rgba(10, 10, 10, 0.95);
-            border: 1px solid #00ffff;
-            border-radius: 6px;
-            padding: 12px;
-            box-shadow: 0 0 15px rgba(0, 255, 255, 0.2);
-            z-index: 1000;
-            font-family: 'Courier Prime', monospace;
-            min-width: 180px;
-        }
-
-        .audio-controls h4 {
-            font-size: 10px;
-            color: #00ffff;
-            margin: 0 0 6px 0;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-        }
-
-        .narrator-name {
-            color: #ff0000;
-            font-size: 12px;
-            margin-bottom: 8px;
-            text-shadow: 0 0 8px rgba(255, 0, 0, 0.3);
-        }
-
-        .audio-btn {
-            padding: 6px 12px;
-            margin: 2px;
-            border: 1px solid;
-            border-radius: 4px;
-            cursor: pointer;
-            font-family: 'Courier Prime', monospace;
-            font-size: 11px;
-            transition: all 0.2s;
-            background: transparent;
-            touch-action: manipulation;
-        }
-
-        .audio-btn.play {
-            border-color: #00ff41;
-            color: #00ff41;
-        }
-
-        .audio-btn.play:hover {
-            background: rgba(0, 255, 65, 0.2);
-            box-shadow: 0 0 8px rgba(0, 255, 65, 0.3);
-        }
-
-        .audio-btn.pause {
-            border-color: #ffaa00;
-            color: #ffaa00;
-        }
-
-        .audio-btn.pause:hover {
-            background: rgba(255, 170, 0, 0.2);
-        }
-
-        .audio-btn.stop {
-            border-color: #ff0000;
-            color: #ff0000;
-        }
-
-        .audio-btn.stop:hover {
-            background: rgba(255, 0, 0, 0.2);
-        }
-
-        .audio-status {
-            font-size: 10px;
-            color: #5a9fb0;
-            margin-top: 6px;
-        }
-
-        .voice-select {
-            width: 100%;
-            padding: 5px;
-            margin-top: 6px;
-            border: 1px solid #00ffff;
-            border-radius: 4px;
-            font-size: 10px;
-            background: #0a0a0a;
-            color: #7ec8e3;
-            font-family: 'Courier Prime', monospace;
-        }
-
-        .voice-select option {
-            background: #0a0a0a;
-            color: #7ec8e3;
-        }
-
-        /* Reading highlight - noir style */
-        .reading {
-            background: rgba(255, 0, 0, 0.08);
-            border-left: 2px solid #ff0000;
-            padding-left: 12px;
-            margin-left: -14px;
-            transition: all 0.3s;
-        }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 45px 15px 15px 15px;
-            }
-
-            .chapter-title {
-                font-size: 1.4em;
-            }
-
-            .paragraph {
-                font-size: 1em;
-            }
-
-            .chapter {
-                margin-bottom: 45px;
-            }
-
-            .twist-reveal {
-                margin: 35px -15px 25px -15px;
-                padding: 30px 15px;
-            }
-
-            .twist-reveal .reveal-text {
-                font-size: 1em;
-            }
-
-            .progress-indicator {
-                display: none;
-            }
-
-            .audio-controls {
-                bottom: 10px;
-                right: 10px;
-                left: 10px;
-                min-width: auto;
-            }
-        }
-
-        @media (max-width: 480px) {
-            body {
-                padding: 40px 12px 12px 12px;
-            }
-
-            .chapter-title {
-                font-size: 1.25em;
-            }
-
-            .paragraph {
-                font-size: 0.95em;
-                margin-bottom: 14px;
-            }
-
-            .chapter {
-                margin-bottom: 35px;
-            }
-
-            .epilogue {
-                padding: 18px;
-                margin-top: 35px;
-            }
-        }
-    </style>
 </head>
 <body class="story-page">
     <a href="../index.html" class="home-link">←</a>
@@ -297,9 +14,9 @@
     </div>
 
     <div class="story-container">
-        <header style="text-align: center; margin-bottom: 40px;">
-            <h1 style="color: #ff0000; font-size: 2.5em; text-shadow: 0 0 15px rgba(255, 0, 0, 0.4); margin-bottom: 8px;">PEANUT CITY</h1>
-            <p style="color: #00ffff; font-size: 1.1em; letter-spacing: 2px;">A Tale of Shells and Secrets</p>
+        <header class="story-header">
+            <h1 class="story-title">PEANUT CITY</h1>
+            <p class="story-subtitle">A Tale of Shells and Secrets</p>
         </header>
 
         <div class="chapter" data-chapter="1">
@@ -424,10 +141,10 @@
                     <p class="paragraph">
                         If you're reading this, you've probably already arrived. You've probably already checked into your room. You've probably already noticed the smell.
                     </p>
-                    <p class="paragraph" style="color: #ff0000; font-size: 1.2em; text-align: center; margin-top: 40px;">
+                    <p class="paragraph story-final">
                         Welcome to Peanut City.
                     </p>
-                    <p class="paragraph" style="color: #ff0000; text-align: center;">
+                    <p class="paragraph story-final-sub">
                         Population: You.
                     </p>
                     <div class="signature">
@@ -437,9 +154,9 @@
             </div>
         </div>
 
-        <div style="text-align: center; margin: 50px 0 30px 0; color: #00ffff; font-size: 0.85em; letter-spacing: 2px;">
+        <div class="story-ending">
             THE END<br>
-            <span style="font-size: 0.9em; opacity: 0.7;">(OR IS IT THE BEGINNING?)</span>
+            <span class="story-ending-sub">(OR IS IT THE BEGINNING?)</span>
         </div>
     </div>
 
