--- a/src/super-flu-thermometer.html
+++ b/src/super-flu-thermometer.html
@@ -284,7 +284,7 @@
 
         <!-- Status Panel -->
         <div class="status-panel">
-            <div class="temp-readout" id="temp-display">--.-°C</div>
+            <div class="temp-readout" id="temp-display">--.-°F</div>
             <div class="alert-text" id="status-text">INITIALIZING...</div>
         </div>
 
