--- a/src/noir-memory-pattern.html
+++ b/src/noir-memory-pattern.html
@@ -366,7 +366,7 @@
                     isCpuTurn = false;
                     statusMsg.textContent = "REPEAT";
                 }
-            }, 800); // Speed of playback
+            }, 1200); // Speed of playback (slower for easier play)
         }
 
         function gameOver() {
