--- a/src/lightsaber-combat.html
+++ b/src/lightsaber-combat.html
@@ -324,20 +324,21 @@
         }
 
         .mobile-controls {
-            margin-top: 15px;
+            margin: 15px auto 0 auto;
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 8px;
-            max-width: 180px;
-            padding-bottom: 20px;
+            grid-template-columns: repeat(3, 54px);
+            gap: 6px;
+            width: fit-content;
+            padding: 0 20px 20px 20px;
+            box-sizing: border-box;
         }
 
         .control-btn {
             background: linear-gradient(180deg, #1a1a1a 0%, #0a0a0a 100%);
             border: 2px solid #333;
             color: #00ffff;
-            height: 56px;
-            width: 56px;
+            height: 54px;
+            width: 54px;
             border-radius: 8px;
             display: flex;
             justify-content: center;
@@ -346,6 +347,7 @@
             box-shadow: 0 4px 0 #000, 0 0 15px rgba(0, 255, 255, 0.1);
             transition: all 0.1s;
             position: relative;
+            flex-shrink: 0;
         }
 
         .control-btn::before {
